force-app/main/default/objects/Opportunity/fields/Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement__c</fullName>
    <label>Acknowledgement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acknowledge</fullName>
            </value>
            <value>
                <fullName>Do Not Acknowledge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>