force-app/main/default/objects/Opportunity/fields/Acknowledgement_Letter__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_Letter__c</fullName>
    <label>Acknowledgement Letter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main TY</fullName>
            </value>
            <value>
                <fullName>Recurring Gift</fullName>
            </value>
            <value>
                <fullName>Grant TY</fullName>
            </value>
            <value>
                <fullName>In-Kind</fullName>
            </value>
            <value>
                <fullName>Staff Giving - Recurring Payroll</fullName>
            </value>
            <value>
                <fullName>Stock TY</fullName>
            </value>
            <value>
                <fullName>Pledge TY</fullName>
            </value>
            <value>
                <fullName>COVID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>