force-app/main/default/objects/Opportunity/fields/Actualized_Stock_Sold_Value__c.field-meta.xml
<CustomField>
    <fullName>Actualized_Stock_Sold_Value__c</fullName>
    <label>Actualized Stock Sold Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>