force-app/main/default/objects/Opportunity/fields/BB_ID__c.field-meta.xml
<CustomField>
    <fullName>BB_ID__c</fullName>
    <externalId>true</externalId>
    <label>BB ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>