force-app/main/default/objects/Opportunity/fields/Constituency__c.field-meta.xml
<CustomField>
    <fullName>Constituency__c</fullName>
    <label>Constituency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>