force-app/main/default/objects/Opportunity/fields/Constituent_Id__c.field-meta.xml
<CustomField>
    <fullName>Constituent_Id__c</fullName>
    <formula>npsp__Primary_Contact__r.Constituent_Id__c</formula>
    <label>Constituent Id</label>
    <type>Text</type>
</CustomField>