force-app/main/default/objects/Opportunity/fields/EA_Team_Assignment__c.field-meta.xml
<CustomField>
    <fullName>EA_Team_Assignment__c</fullName>
    <label>EA Team Assignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Team 1</fullName>
            </value>
            <value>
                <fullName>Team 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>