force-app/main/default/objects/Opportunity/fields/Gift_Status__c.field-meta.xml
<CustomField>
    <fullName>Gift_Status__c</fullName>
    <label>Gift Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>