force-app/main/default/objects/Opportunity/fields/Grant_Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Grant_Loss_Reason__c</fullName>
    <label>Grant Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Declined to Apply</fullName>
            </value>
            <value>
                <fullName>Not A Fit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>