force-app/main/default/objects/Opportunity/fields/Posted__c.field-meta.xml
<CustomField>
    <fullName>Posted__c</fullName>
    <label>Posted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>