force-app/main/default/objects/Opportunity/fields/Receipt_Status__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Status__c</fullName>
    <label>Receipt Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Needs Receipt</fullName>
            </value>
            <value>
                <fullName>Receipted</fullName>
            </value>
            <value>
                <fullName>Do Not Receipt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>