force-app/main/default/objects/Opportunity/fields/Reference_Date__c.field-meta.xml
<CustomField>
    <fullName>Reference_Date__c</fullName>
    <label>Reference Date</label>
    <type>Date</type>
</CustomField>