force-app/main/default/objects/Opportunity/fields/Stripe_Payment_Fees__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Payment_Fees__c</fullName>
    <label>Stripe Payment Fees</label>
    <summarizedField>npe01__OppPayment__c.Stripe_Fee__c</summarizedField>
    <summaryForeignKey>npe01__OppPayment__c.npe01__Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>