force-app/main/default/objects/Opportunity/fields/Stripe_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Transaction_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Stripe Transaction Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>