force-app/main/default/objects/Opportunity/fields/True_Payment_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>True_Payment_Amount_Received__c</fullName>
    <inlineHelpText>The total amount of payments received minus any fees.</inlineHelpText>
    <label>True Payment Amount Received</label>
    <summarizedField>npe01__OppPayment__c.True_Amount__c</summarizedField>
    <summaryForeignKey>npe01__OppPayment__c.npe01__Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>