force-app/main/default/objects/Opportunity/fields/Valuation_At_Time_Of_Giving__c.field-meta.xml
<CustomField>
    <fullName>Valuation_At_Time_Of_Giving__c</fullName>
    <label>Valuation At Time Of Giving</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>