force-app/main/default/objects/Opportunity/recordTypes/Stock_Bond_Donation.recordType-meta.xml
<RecordType>
    <fullName>Stock_Bond_Donation</fullName>
    <active>true</active>
    <businessProcess>Stock%2FBond Donation</businessProcess>
    <description>Stock/Bond Donation Received</description>
    <label>Stock/Bond Donation</label>
</RecordType>