force-app/main/default/objects/Opportunity/validationRules/Require_Actualized_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Actualized_Value</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

 ISPICKVAL( StageName , &quot;Actualized&quot;) ,

 ISBLANK( Amount ),

 ISBLANK( Actualized_Stock_Sold_Value__c )
)</errorConditionFormula>
    <errorMessage>Please enter in an amount and/or an actualized stock value amount</errorMessage>
</ValidationRule>