force-app/main/default/objects/Opportunity/validationRules/Require_Closed_Lost_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Closed_Lost_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

  ISPICKVAL (StageName, &quot;Declined&quot;),

  ISBLANK (TEXT(Grant_Loss_Reason__c))

)</errorConditionFormula>
    <errorMessage>Opportunity stage is loss, please choose a value in Grant Loss Reason field</errorMessage>
</ValidationRule>