force-app/main/default/objects/Opportunity/listViews/Team_2.listView-meta.xml
<ListView>
    <fullName>Team_2</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>EA_Team_Assignment__c</field>
        <operation>equals</operation>
        <value>Team 2</value>
    </filters>
    <label>Team 2</label>
</ListView>