force-app/main/default/objects/Opportunity/listViews/To_be_Acknowledged.listView-meta.xml
<ListView>
    <fullName>To_be_Acknowledged</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>npsp__Acknowledgment_Status__c</field>
        <operation>equals</operation>
        <value>To Be Acknowledged</value>
    </filters>
    <label>To be Acknowledged</label>
</ListView>